# project1_multi_threaded_programming

./: .gitignore  CMakeLists.txt  README.md
ProjectB/: Makefile  number_processor  number_processor.cpp  number_producer  number_producer.cpp
src/banking/: account.cpp  account.hpp  bank.cpp  bank.hpp  main.cpp
src/integrated/: transaction_logger.cpp
src/ipc/: consumer.cpp  producer.cpp
tests/banking/: account_test.cpp  bank_test.cpp
tests/ipc/: pipe_test.cpp
